# NeuralBlender

./: CMakeLists.txt  README.md  timestamp.sh
cmake/: NeuralBlenderGui.cmake
data/: buttons.xcf  bypass.nam  calib-bass.f32  calib.f32  generate_inline_data.list  generate_inline_data.sh  gx_presence_contrast.f32  textlogo.xcf  xresources.h
data/sample_nam/: amplug2-metal-bypass.nam  amplug2-metal-green-tone1.nam  amplug2-metal-green-tone5.nam  amplug2-metal-green-tone9.nam  amplug2-metal-orange-tone1.nam  amplug2-metal-orange-tone5.nam  amplug2-metal-orange-tone9.nam  amplug2-metal-red-tone1.nam  amplug2-metal-red-tone5.nam  amplug2-metal-red-tone9.nam  bassman-v2-clean+fuzz-cab.nam  bassman-v2-clean+fuzz-nocab.nam  bassman-v2-clean.nam  bassman-v2-fuzzonly-cab.nam  bassman-v2-fuzzonly-nocab.nam  dcflip.nam
lv2/: generate_ttl.sh  manifest.ttl  manifest.ttl.in  neuralblender.ttl  neuralblender.ttl.in  neuralblender_ui.map
src/: cmdline_debug.h  config.cpp  config.h  configfile.cpp  configfile.h  gzip.cpp  gzip.h  lv2.cpp  lv2.h  lv2_ui.cpp  meter.cpp  meter.h  meter_data.cpp  neuralblender.cpp  neuralblender.h  standalone.cpp  timestamp.cpp  tuner.cpp  tuner.h  ui.cpp  ui.h  widgets.cpp  widgets.h  xputty_compat.h  xputty_res.h
